# nmap-ai

./: CONTRIBUTORS.md  DEVELOPER_MESSAGE.md  DONATE.md  Dockerfile  LICENSE  PRIVACY_POLICY.md  PROJECT_STRUCTURE.md  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
assets/: README.md
config/: README.md  default.yaml
data/: README.md
docs/: README.md  index.md  installation.md
examples/: README.md  ai_script_gen.py  basic_scan.py  batch_scanning.py
nmap_ai/: __init__.py  __main__.py  config.py
nmap_ai/ai/: __init__.py  script_generator.py  smart_scanner.py  vulnerability_detector.py
nmap_ai/ai/models/: README.md  model_info.py
nmap_ai/cli/: __init__.py  main.py
nmap_ai/cli/commands/: __init__.py  config.py  report.py  scan.py  setup.py
nmap_ai/core/: __init__.py  ai_engine.py  parser.py  scanner.py
nmap_ai/gui/: __init__.py  main.py
nmap_ai/gui/resources/: README.md
nmap_ai/gui/resources/icons/: app_icon.placeholder
nmap_ai/gui/resources/styles/: main.qss
nmap_ai/gui/widgets/: README.md  scan_widget.py
nmap_ai/plugins/: __init__.py  base.py
nmap_ai/utils/: __init__.py  helpers.py  logger.py  validators.py
nmap_ai/web/: __init__.py  main.py
nmap_ai/web/api/: __init__.py  endpoints.py  models.py
nmap_ai/web/static/: README.md
nmap_ai/web/static/css/: main.css
nmap_ai/web/static/js/: app.js
nmap_ai/web/templates/: README.md  base.html  index.html
scripts/: README.md  install.sh
tests/: README.md  conftest.py
tests/fixtures/: README.md  nmap_sample.xml  sample_networks.json
tests/integration/: README.md  test_api_endpoints.py
tests/unit/: test_vulnerability_detector.py
